<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SaveDataSqlDbFragment">

    <EditText
        android:id="@+id/txtId"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="739dp"
        android:hint="@string/txtId"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="739dp"
        android:hint="@string/txtName"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtUserAge"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="288dp"
        android:hint="@string/txtAge"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUserPhone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="376dp"
        android:hint="@string/txtPhoneNumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsertData"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="440dp"
        android:text="@string/btnInsertData"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeleteData"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="440dp"
        android:text="@string/btnDeleteData"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="500dp"
        android:text="@string/btnUpdateData"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFetchData"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="500dp"
        android:text="@string/btnFetchData"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>