<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SqliteDBActivity">

    <FrameLayout
        android:id="@+id/sqlLiteFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddDB"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="660dp"
        android:text="@string/btnAddDB"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sqlLiteFrameLayout"
        app:layout_constraintTop_toTopOf="@+id/sqlLiteFrameLayout" />

    <Button
        android:id="@+id/btnShowDB"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="660dp"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/btnShowDB"
        app:layout_constraintStart_toStartOf="@+id/sqlLiteFrameLayout"
        app:layout_constraintTop_toTopOf="@+id/sqlLiteFrameLayout" />

    <Button
        android:id="@+id/btnVolley"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="712dp"
        android:gravity="center"
        android:text="@string/btnVolley"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sqlLiteFrameLayout"
        app:layout_constraintTop_toTopOf="@+id/sqlLiteFrameLayout" />

    <Button
        android:id="@+id/btnRetrofit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="712dp"
        android:gravity="center"
        android:text="@string/btnRetrofit"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sqlLiteFrameLayout"
        app:layout_constraintTop_toTopOf="@+id/sqlLiteFrameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>