<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:background="@drawable/style_corner_view"
            android:orientation="vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:text="@string/labelId"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="136dp"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/labelName"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="136dp"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/labelAge"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginTop="104dp"
                android:layout_marginLeft="136dp"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="148dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/labelPhone"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginTop="148dp"
                android:layout_marginLeft="136dp"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                android:layout_marginBottom="24dp"
                tools:ignore="RtlHardcoded" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>